deploy/base/openehr-nodes/test/openehrtool/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-openehrtool
  namespace: dh-health
  labels:
    app: test-openehrtool
    ehr-node-name: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-openehrtool
  template:
    metadata:
      labels:
        app: test-openehrtool
    spec:
      containers:
      - name: test-openehrtool
        image: surfercrs4/openehrtool:latest
        ports:
        - containerPort: 9000
        env:
          - name: EHRBASEUSERS_adusername
            valueFrom:
              secretKeyRef:
                name: test-ehrbase-admin-creds
                key: username
          - name: EHRBASEUSERS_adpassword
            valueFrom:
              secretKeyRef:
                name: test-ehrbase-admin-creds
                key: password
          - name: EHRBASEUSERS_username
            valueFrom:
              secretKeyRef:
                name: test-ehrbase-creds
                key: username
          - name: EHRBASEUSERS_password
            valueFrom:
              secretKeyRef:
                name: test-ehrbase-creds
                key: password
        envFrom:
        - configMapRef:
            name: openehrtool-config
        - configMapRef:
            name: test-openehrtool-config
