deploy/base/openehr-nodes/test/openehrtool/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-openehrtool-ingress
  namespace: dh-health
spec:
  ingressClassName: nginx
  rules:
    - host: openehrtool.test.env.dh.unimaas.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-openehrtool
                port:
                  number: 9000
