deploy/base/openehr-nodes/test/openehrtool/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-openehrtool
spec:
  selector:
    app: test-openehrtool
  ports:
  - port: 9000
    targetPort: 9000
    name: http
